--- a/blogs_CN/magicmask.html
+++ b/blogs_CN/magicmask.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>教程</title>
+<title>神奇遮罩</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,47 +458,32 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        教程                    </div>
+                        【一分钟】将文字完美融入画面（终极版）全自动扣像 达芬奇教程 干货                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        请看下面我的Davinci Resolve教程                 </p>
+                        在本教程中，我使用DaVinci Resolve来演示MagicMask的基本功用。</p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/automation.html">
+                    <a href="https://www.bilibili.com/video/BV1yb4y1b7rf/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            【90秒】达芬奇智能全自动功能 新手向 干货教程
+                            BILIBILI
                         </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="https://www.haozheli.com/blogs_CN/slomotion.html">
+                    <a href="https://youtu.be/tWerA8QFjAo">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            【一分钟】使用达芬奇制作超级慢动作 简单易懂 干货教程
+                            YOUTUBE
                         </button>
                     </a>
 
-                    <p><br></p>
-
-                    <a href="https://www.haozheli.com/blogs_CN/magicMask.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            MagicMask - Davinci Resolve Tutorial
-                        </button>
-                    </a>
-
-                    <p><br></p>
-
-                    <a href="https://www.haozheli.com/blogs_CN/visualEffects.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            【90秒】 三个炫酷跟踪效果 超干货 新手向 达芬奇教程
-                        </button>
-                    </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/tutorial.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/magicmask.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
