--- a/CN.html
+++ b/CN.html
@@ -344,7 +344,7 @@
                             <option value="index.html">Auto</option>
                             <option value="EN.html">English</option>
                             <option value="CN.html">简体中文</option>
-                            <option value="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
+                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other</option>
                         </select>
                     </p>
                     <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
