--- a/CN.html
+++ b/CN.html
@@ -341,7 +341,7 @@
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <select onchange="window.location=this.value;">
                             <option value="">请选择您的语言</option>
-                            <option value="index.html">Auto (Follw your System)</option>
+                            <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English</option>
                             <option value="CN.html">简体中文</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 (Google Translate)</option>
