--- a/CN.html
+++ b/CN.html
@@ -81,7 +81,10 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
+	<section id="home" class="main-banner" style="position:relative; overflow:hidden;">
+        <video autoplay muted loop poster="uploads/banner-01.jpg" class="fullscreen-video">
+            <source src="uploads/banner.mp4" type="video/mp4">
+        </video>
 		<div class="heading">
 			<h1></h1><h1>我是李浩哲</h1>
             <p></p>
@@ -89,7 +92,7 @@
 				<span>我喜欢</span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">编程</b>
-					<b>电影制作</b>
+					<b>拍视频</b>
 					<b>视频调色</b>
 					<b>特效</b>
                     <b>演奏大提琴</b>
@@ -97,6 +100,19 @@
 			</h3>
 		</div>
 	</section>
+    <style>
+        .fullscreen-video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -1;
+        }
+    </style>
 
 	<svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewbox="0 0 85 100" preserveaspectratio="none">
         <path d="M-5 100 Q 0 20 5 100 Z
