--- a/CN.html
+++ b/CN.html
@@ -82,8 +82,9 @@
     </nav>
 	
 	<section id="home" class="main-banner" style="position:relative; overflow:hidden;">
-        <video autoplay muted loop poster="uploads/banner-01.jpg" class="fullscreen-video">
+        <video autoplay muted loop poster="uploads/banner.jpeg" class="fullscreen-video">
             <source src="uploads/banner.mp4" type="video/mp4">
+            <img src="uploads/banner.jpeg" alt="Video background" title="Your browser does not support the <video> tag">
         </video>
 		<div class="heading">
 			<h1></h1><h1>我是李浩哲</h1>
