--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
     </nav>
 	
 	<section id="home" class="main-banner" style="position:relative; overflow:hidden;">
-        <video autoplay muted loop poster="uploads/banner.jpeg" class="fullscreen-video">
-            <source src="uploads/banner.mp4" type="video/mp4">
-            <img src="uploads/banner.jpeg" alt="Video background" title="Your browser does not support the <video> tag">
+        <video autoplay muted loop poster="uploads/banner.jpg" class="fullscreen-video">
+            <source src="uploads/banner.webm" type="video/webm">
         </video>
 		<div class="heading">
 			<h1></h1><h1>I am Haozhe Li</h1>
